--- a/backEnd/src/main/resources/application.properties
+++ b/backEnd/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ##MySql Configuration
 
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=*****
 spring.datasource.url=jdbc:mysql://localhost/productRegister?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 
 # show sql queries
